--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +12,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^8.6.0",
     "nodemon": "^3.1.4"
   }
